# fourier

./: .isort.cfg  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py
pics/: fourier.mkv
src/fourier/: cli.py
